--- a/web3servlet/src/main/webapp/main.html
+++ b/web3servlet/src/main/webapp/main.html
@@ -23,5 +23,10 @@
 <h3>쿠키와 세션(클라이언트와 서버의 상태를 유지시키는 효과)</h3>
 <a href="ServletCookie">쿠키(cookie) 연습</a><br>
 <a href="ServletSession">세션(session) 연습</a><br>
+<br>
+<h3>세션 연습용 - 장바구니에 상품 담기</h3>
+<a href="shopping/shop.html">쇼핑하기</a><br>
+<h3>DB 연동 연습용 - 상품자료 출력</h3>
+<a href="DbServlet">상품정보</a><br>
 </body>
 </html>
